added base of a component action framework created a combo box action upgraded Unicode block parsing routines for Unicode 4 added Unicode block combo box to Unicode panel